rsyslog/trunk: update default config

--- a/csw/mgar/pkg/rsyslog/trunk/files/rsyslog.conf
+++ b/csw/mgar/pkg/rsyslog/trunk/files/rsyslog.conf
@@ -1,10 +1,8 @@
-# rsyslog v5 configuration file
-
 # if you experience problems, check
 # http://www.rsyslog.com/troubleshoot for assistance
 
 $ModLoad immark   # provides --MARK-- message capability
-$ModLoad imuxsock # provides support for local system logging (e.g. via logger command)
+$ModLoad imsolaris # need for Solaris support
 
 # Log all kernel messages to the console.
 # Logging much else clutters up the screen.
@@ -15,7 +13,7 @@ $ModLoad imuxsock # provides support for local system logging (e.g. via logger c
 *.info;mail.none;authpriv.none;cron.none                -/var/log/messages
 
 # The authpriv file has restricted access.
-authpriv.*                                              /var/log/secure
+authpriv.*                                              /var/log/authlog
 
 # Log all the mail messages in one place.
 mail.*                                                  -/var/log/maillog
@@ -25,7 +23,7 @@ mail.*                                                  -/var/log/maillog
 cron.*                                                  -/var/log/cron
 
 # Everybody gets emergency messages
-*.emerg                                                 *
+*.emerg                                                 :omusrmsg:*
 
 # Save news errors of level crit and higher in a special file.
 uucp,news.crit                                          -/var/log/spooler
