glib2/trunk: updated to 2.41.1

--- a/csw/mgar/pkg/glib2/trunk/Makefile
+++ b/csw/mgar/pkg/glib2/trunk/Makefile
@@ -8,7 +8,7 @@
 # Set max open files to 1024
 
 NAME = glib
-VERSION = 2.41.0
+VERSION = 2.41.1
 GARTYPE = v2
 # for memory synchronisation primitives like __sync_synchronize we need gcc
 GARCOMPILER = GNUOM#where can we build?
@@ -163,15 +163,15 @@ RUNTIME_DEP_PKGS_CSWlibgio2-0-0 += CSWlibglib2-0-0
 RUNTIME_DEP_PKGS_CSWlibgio2-0-0 += CRUNTIME_DEP_PKGS_CSWlibgio2-0-0 += CSWlibgcc-s1CRUNTIME_DEP_PKGS_CSWlibgio2-0-0_5.10_sparc += CSWlibffi6
 RUNTIME_DEP_PKGS_CSWlibgio2-0-0 += $(RUNTIME_DEP_PKGS_CSWlibgio2-0-0_$(GAROSREL)_$(GARCH))C-0 += CSWlibffi4
 # Those are ok: hardcoded search paths which have added /opt/csw
-CHECKPKG_OVERRIDES_CSWlibgio2-0-0 += file-with-bad-content|/usr/local|root/opt/csw/lib4100.0
-CHECKPKG_OVERRIDES_CSWlibgio2-0-0 += file-with-bad-content|/usr/share|root/opt/csw/lib/libgio-2.0.so.0.4100.0.*/gdb .*/gdb/.*
+CHECKPKG_OVERRIDES_CSWlibgio2-0-0 += file-with-bad-content|/usr/local|root/opt/csw/lib4101.0
+CHECKPKG_OVERRIDES_CSWlibgio2-0-0 += file-with-bad-content|/usr/share|root/opt/csw/lib/libgio-2.0.so.0.4101.0.*/gdb .*/gdb/.*
 
 # libgio uses the mime info for determining the type of files
 CHECKPKG_OVERRIDES_CSWlibgio2-0-0 += surplus-dependency|C-2.0.so.0.3200.4
-CHECKPKG_OVERRID_sparcES_CSWlibgio2-0-0 += file-with-bad-content|/usr/local|root/opt/csw/lib/sparcv94100.0
-CHECKPKG_OVERRIDES_CSWlibgio2-0-0_sparcS_CSWlibglib2-0-0 += file-with-share|root/opt/csw/lib/sparcv9/libgio-2.0.so.0.4100.0o-2.0.so.0.3200.4
-CHECKPKG_OVERRID_i386ES_CSWlibgio2-0-0 += file-with-bad-content|/usr/local|root/opt/csw/lib/amd644100.0o-2.0.so.0.3200.4
-CHECKPKG_OVERRID_i386ES_CSWlibgio2-0-0 += file-with-share|root/opt/csw/lib/amd64/libgio-2.0.so.0.4100.0
+CHECKPKG_OVERRID_sparcES_CSWlibgio2-0-0 += file-with-bad-content|/usr/local|root/opt/csw/lib/sparcv94101.0
+CHECKPKG_OVERRIDES_CSWlibgio2-0-0_sparcS_CSWlibglib2-0-0 += file-with-share|root/opt/csw/lib/sparcv9/libgio-2.0.so.0.4101.0o-2.0.so.0.3200.4
+CHECKPKG_OVERRID_i386ES_CSWlibgio2-0-0 += file-with-local|root/opt/csw/lib/amd64/libgio-2.0.so.0.4101.0o-2.0.so.0.3200.4
+CHECKPKG_OVERRID_i386ES_CSWlibgio2-0-0 += file-with-share|root/opt/csw/lib/amd64/libgio-2.0.so.0.4101.0
 CHECKPKG_OVERRIDES_CSWlibgio2-0-0 += $(CHECKPKG_OVERRIDES_CSWlibgio2-0-0_$(GARCH))
 o-2.0.so.0.3200.4
 
@@ -181,8 +181,8 @@ SPKG_DESC_CSWlibglib2-0-0 += $(DESCRIPTION), libglib-2.0.so.0
 RUNTIME_DEP_PKGS_CSWlibglib2-0-0 += CSWlibintl8
 RUNTIME_DEP_PKGS_CSWlibglib2-0-0 += CSWlibiconv2
 RUNTIME_DEP_PKGS_CSWlibglib2-0-RUNTIME_DEP_PKGS_CSWlibglib2-0-0 += CSWlibgcc-s1
-CHECKPKG_OVERRIDES_CSWlibglib2-0-0 += file-with-bad-content|/usr/share|root/opt/csw/lib/libglib-2.0.so.0.4100.0ve added /opt/csw
-CHECKPKG_OVERRIDES_CSWlibglib2-0-0 += file-with-bad-content|/usr/local|root/opt/csw/lib/4100.0--2.0.so.0.3200.4
+CHECKPKG_OVERRIDES_CSWlibglib2-0-0 += file-with-bad-content|/usr/share|root/opt/csw/lib/libglib-2.0.so.0.4101.0ve added /opt/csw
+CHECKPKG_OVERRIDES_CSWlibglib2-0-0 += file-with-bad-content|/usr/local|root/opt/csw/lib/4101.0--2.0.so.0.3200.4
 
 
 PACKAGES += CSWlibgmodule2-0-0
@@ -191,12 +191,12 @@ SPKG_DESC_CSWlibgmodule2-0-0 += $(DESCRIPTION), libgmodule-2.0.so.0
 RUNTIME_DEP_PKGS_CSWlibgmoduglib2-0-00RUNTIME_DEP_PKGS_CSWlibgmodule2-0-0 += CSWlibgcc-s10RUNTIME_DEP_PKGS_CSWlibgmodule2-0-0_5.10_sparc += CSWlibintl8
 RUNTIME_DEP_PKGS_CSWlibgmodule2-0-0 += $(RUNTIME_DEP_PKGS_CSWlibgmodule2-0-0_$(GAROSREL)_$(GARCH))0-0 += CSWlibffi4
 # Those are ok: hardcoded search paths which have added /opt/csw
-CHECKPKG_OVERRIDES_CSWlibglib2-0-0 += file-with-bad-content|/usr/local|root/opt/csw/lib/4100.0
-CHECKPKG_OVERRIDES_CSWlibglib2-0-0 += file-with-bad-content|/usr/share|root/opt/csw/lib/libglib-2.0.so.0.4100.0
-CHECKPKG_OVERRIDES_CSWlibglib2-0-0_sparcS_CSWlibglib2-0-0 += file-with-bad-content|/usr/local|root/opt/csw/lib/sparcv9/4100.0
-CHECKPKG_OVERRIDES_CSWlibglib2-0-0_sparcS_CSWlibglib2-0-0 += file-with-share|root/opt/csw/lib/sparcv9/libglib-2.0.so.0.4100.0b-2.0.so.0.3200.4
-CHECKPKG_OVERRIDE_i386S_CSWlibglib2-0-0 += file-with-bad-content|/usr/local|root/opt/csw/lib/amd64/4100.0b-2.0.so.0.3200.4
-CHECKPKG_OVERRIDE_i386S_CSWlibglib2-0-0 += file-with-share|root/opt/csw/lib/amd64/libglib-2.0.so.0.4100.0b-2.0.so.0.3200.4
+CHECKPKG_OVERRIDES_CSWlibglib2-0-0 += file-with-bad-content|/usr/local|root/opt/csw/lib/4101.0
+CHECKPKG_OVERRIDES_CSWlibglib2-0-0 += file-with-bad-content|/usr/share|root/opt/csw/lib/libglib-2.0.so.0.4101.0
+CHECKPKG_OVERRIDES_CSWlibglib2-0-0_sparcS_CSWlibglib2-0-0 += file-with-bad-content|/usr/local|root/opt/csw/lib/sparcv9/4101.0
+CHECKPKG_OVERRIDES_CSWlibglib2-0-0_sparcS_CSWlibglib2-0-0 += file-with-share|root/opt/csw/lib/sparcv9/libglib-2.0.so.0.4101.0b-2.0.so.0.3200.4
+CHECKPKG_OVERRIDE_i386S_CSWlibglib2-0-0 += file-with-bad-content|/usr/local|root/opt/csw/lib/amd64/4101.0b-2.0.so.0.3200.4
+CHECKPKG_OVERRIDE_i386S_CSWlibglib2-0-0 += file-with-share|root/opt/csw/lib/amd64/libglib-2.0.so.0.4101.0b-2.0.so.0.3200.4
 CHECKPKG_OVERRIDES_CS$(CHECKPKG_OVERRIDES_CSWlibglib2-0-0_$(GARCH))-0 += CSWlibpcre1
 
 PACKAGES += CSWlibgobject2-0-0
